# binary

./: .gitignore  CMakeLists.txt  buildnrun  buildntest  export
src/: CMakeLists.txt  bitmap.cpp  blockedzlib.cpp  file.cpp  main.cpp  memory.cpp  png.cpp  reader.cpp  writer.cpp  zlib.cpp
src/include/shilm/: arrayreader.h  arraywriter.h  bassert.h  binaryexport.h  bitmap.h  buffer.h  file.h  filereader.h  filewriter.h  memory.h  reader.h  writer.h  zlib.h
test/: CMakeLists.txt  image.cpp  reader.cpp
